# reladiff

./: .gitignore  pyproject.toml
reladiff/: hashdiff_tables.py  table_segment.py
reladiff/sqeleton/abcs/: database_types.py
sqeleton/: utils.py
sqeleton/databases/: duckdb.py  mysql.py  oracle.py  postgresql.py  snowflake.py
sqeleton/queries/: extras.py
