[tool.poetry]
name = "reladiff"
version = "0.6.0"
description = "Command-line tool and Python library to efficiently diff rows across two different databases."
authors = ["Erez Shinan <erezshin@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/erezsh/reladiff"
documentation = "https://reladiff.readthedocs.io/en/latest/"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed"
]
packages = [{ include = "reladiff" }]

[tool.poetry.dependencies]
python = "^3.8"
runtype = ">=0.5.0"
dsnparse = "*"
click = ">=8.1"
rich = "*"
toml = ">=0.10.2"
mysql-connector-python = {version=">=8.0.29", optional=true}
psycopg2-binary = {version="*", optional=true}
snowflake-connector-python = {version=">=2.7.2", optional=true}
cryptography = {version="*", optional=true}
trino = {version=">=0.314.0", optional=true}
presto-python-client = {version="*", optional=true}
clickhouse-driver = {version="*", optional=true}
duckdb = {version=">=0.7.0", optional=true}
textual = {version=">=0.9.1", optional=true}
textual-select = {version="*", optional=true}
pygments = {version=">=2.13.0", optional=true}
prompt-toolkit = {version=">=3.0.36", optional=true}
pyarrow = [
    {version=">=18.0.0", markers="python_version >= '3.9'", optional=true},
    {version="<18.0.0", markers="python_version < '3.9'", optional=true},
]
pandas = [
    {version=">=2.1", markers="python_version >= '3.9'", optional=true},
    {version="*", markers="python_version < '3.9'", optional=true},
]
numpy = [
    {version=">=1.26.4", markers="python_version >= '3.9'", optional=true},
    {version=">=1.24.4", markers="python_version < '3.9'", optional=true},
]
# sqlalchemy-dremio 3.0.4 is missing a type conversion for datetime[ms] and is not compatible with Python 3.8. Created a
# fork with a fix and opening a PR.
sqlalchemy-dremio = {git = "https://github.com/scottkwalker/sqlalchemy_dremio", rev="308e686b166787941180850ce5813c313d3a9985", optional=true}

[tool.poetry.dev-dependencies]
parameterized = "*"
unittest-parallel = "*"
# preql = ">=0.2.19"
mysql-connector-python = "*"
psycopg2-binary = "*"
snowflake-connector-python = ">=2.7.2"
cryptography = "*"
trino = ">=0.314.0"
presto-python-client = "*"
clickhouse-driver = "*"
vertica-python = "*"
duckdb = "<1.2"
# google-cloud-bigquery = "*"
# databricks-sql-connector = "*"
pyarrow = [
    {version=">=18.0.0", markers="python_version >= '3.9'"},
    {version="<18.0.0", markers="python_version < '3.9'"},
]
pandas = [
    {version=">=2.1", markers="python_version >= '3.9'"},
    {version="*", markers="python_version < '3.9'"},
]
numpy = [
    {version=">=1.26.4", markers="python_version >= '3.9'"},
    {version=">=1.24.4", markers="python_version < '3.9'"},
]
# sqlalchemy-dremio 3.0.4 is missing a type conversion for datetime[ms] and is not compatible with Python 3.8. Created a
# fork with a fix and opening a PR.
sqlalchemy-dremio = {git = "https://github.com/scottkwalker/sqlalchemy_dremio", rev="308e686b166787941180850ce5813c313d3a9985"}

[tool.poetry.extras]
# When adding, update also: README + dev deps just above
preql = ["preql"]
mysql = ["mysql-connector-python"]
postgresql = ["psycopg2-binary"]
snowflake = ["snowflake-connector-python", "cryptography"]
presto = ["presto-python-client"]
oracle = ["cx_Oracle"]
# databricks = ["databricks-sql-connector"]
trino = ["trino"]
clickhouse = ["clickhouse-driver"]
vertica = ["vertica-python"]
duckdb = ["duckdb"]
tui = ["textual", "textual-select", "pygments", "prompt-toolkit"]
dremio = ["sqlalchemy-dremio", "pandas", "pyarrow"]

all = ["mysql-connector-python", "psycopg2-binary", "snowflake-connector-python", "cryptography", "presto-python-client", "cx_Oracle", "trino", "clickhouse-driver", "vertica-python", "duckdb"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
reladiff = 'reladiff.__main__:main'

[tool.mypy]
no_implicit_optional=false

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.black]
line-length = 120
target-version = ['py38']
